--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 plugins {
-    id 'java'
-    id 'java-library'
+    id "java"
+    id "java-library"
     id "io.spring.dependency-management" version "1.0.8.RELEASE"
-    id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id "com.github.johnrengelman.shadow" version "5.1.0"
 }
 
-group = 'info.matsumana.prometheus'
-version = '0.0.1-SNAPSHOT'
+group = "info.matsumana.prometheus"
+version = "0.0.1-SNAPSHOT"
 
 sourceCompatibility = JavaVersion.VERSION_13
 targetCompatibility = JavaVersion.VERSION_13
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+[compileJava, compileTestJava]*.options*.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
@@ -18,22 +18,33 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom 'com.linecorp.armeria:armeria-bom:0.95.0'
-        mavenBom 'org.junit:junit-bom:5.5.2'
+        mavenBom "com.linecorp.armeria:armeria-bom:0.95.0"
+        mavenBom "io.micrometer:micrometer-bom:1.3.0"
+        mavenBom "org.junit:junit-bom:5.5.2"
     }
     dependencies {
-        dependency 'com.google.guava:guava:28.1-jre'
-        dependency 'org.assertj:assertj-core:3.13.2'
+        dependency "com.google.guava:guava:28.1-jre"
+        dependency "org.projectlombok:lombok:1.18.10"
+        dependency "ch.qos.logback:logback-classic:1.2.3"
+        dependency "org.assertj:assertj-core:3.13.2"
     }
 }
 
 dependencies {
-    implementation 'com.linecorp.armeria:armeria'
-    implementation 'com.google.guava:guava'
+    implementation "com.linecorp.armeria:armeria"
+    implementation "com.google.guava:guava"
+    implementation "ch.qos.logback:logback-classic"
+    implementation "io.micrometer:micrometer-registry-prometheus"
+    compileOnly "org.projectlombok:lombok"
+    annotationProcessor "org.projectlombok:lombok"
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api'
-    testImplementation 'org.assertj:assertj-core'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation "org.junit.jupiter:junit-jupiter-api"
+    testImplementation "org.assertj:assertj-core"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
+}
+
+compileJava {
+    options.compilerArgs += "-parameters"
 }
 
 test {
@@ -42,6 +53,6 @@ test {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'info.matsumana.prometheus.App'
+        attributes "Main-Class": "info.matsumana.prometheus.Main"
     }
 }
