--- a/example/external-prometheus/prometheus.yml
+++ b/example/external-prometheus/prometheus.yml
@@ -20,7 +20,7 @@ scrape_configs:
         action: replace
         target_label: __metrics_path__
         regex: (.*?):(.*?);(.*)
-        replacement: /apiserver-metrics/$1/$2/metrics
+        replacement: /apiservers/$1/$2/metrics
       - source_labels: [__address__]
         target_label: instance
       - target_label: __address__
@@ -80,7 +80,7 @@ scrape_configs:
         action: replace
         target_label: __metrics_path__
         regex: (.+)(?::\d+);(\d+);(.*)
-        replacement: /pod-metrics/$1/$2$3
+        replacement: /pods/$1/$2$3
       - source_labels: [__address__]
         target_label: instance
       - target_label: __address__
