--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = "info.matsumana.kubernetes"
-version = "0.0.1-SNAPSHOT"
+version = "0.1.0"
 
 sourceCompatibility = JavaVersion.VERSION_13
 targetCompatibility = JavaVersion.VERSION_13
