--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
     id "java"
-    id "java-library"
+    id "org.springframework.boot" version "2.2.1.RELEASE"
     id "io.spring.dependency-management" version "1.0.8.RELEASE"
-    id "com.github.johnrengelman.shadow" version "5.1.0"
 }
 
 group = "info.matsumana.kubernetes"
@@ -19,24 +18,22 @@ repositories {
 dependencyManagement {
     imports {
         mavenBom "com.linecorp.armeria:armeria-bom:0.95.0"
-        mavenBom "io.micrometer:micrometer-bom:1.3.0"
-        mavenBom "org.junit:junit-bom:5.5.2"
     }
     dependencies {
         dependency "com.google.guava:guava:28.1-jre"
-        dependency "org.projectlombok:lombok:1.18.10"
-        dependency "ch.qos.logback:logback-classic:1.2.3"
-        dependency "org.assertj:assertj-core:3.13.2"
     }
 }
 
 dependencies {
-    implementation "com.linecorp.armeria:armeria"
+    implementation "com.linecorp.armeria:armeria-spring-boot-webflux-starter"
+    implementation "com.linecorp.armeria:armeria-spring-boot-actuator-starter"
     implementation "com.google.guava:guava"
-    implementation "ch.qos.logback:logback-classic"
     implementation "io.micrometer:micrometer-registry-prometheus"
+
     compileOnly "org.projectlombok:lombok"
     annotationProcessor "org.projectlombok:lombok"
+    compileOnly "org.springframework.boot:spring-boot-configuration-processor"
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api"
     testImplementation "org.assertj:assertj-core"
@@ -49,10 +46,4 @@ compileJava {
 
 test {
     useJUnitPlatform()
-}
-
-jar {
-    manifest {
-        attributes "Main-Class": "info.matsumana.kubernetes.Application"
-    }
 }
