--- a/example/manifests/2k8s-proxy-prometheus.yml
+++ b/example/manifests/2k8s-proxy-prometheus.yml
@@ -23,33 +23,14 @@ spec:
       containers:
         - name: k8s-proxy-prometheus
           image: localhost:5000/k8s-proxy-prometheus:latest
-          command:
-            [
-              "/root/docker-entrypoint.sh",
-              "java",
-              "-XX:+UseG1GC",
-              "-Djava.rmi.server.hostname=127.0.0.1",
-              "-Dcom.sun.management.jmxremote",
-              "-Dcom.sun.management.jmxremote.rmi.port=8686",
-              "-Dcom.sun.management.jmxremote.port=8686",
-              "-Dcom.sun.management.jmxremote.local.only=false",
-              "-Dcom.sun.management.jmxremote.ssl=false",
-              "-Dcom.sun.management.jmxremote.authenticate=false",
-              "-Xlog:gc*=debug:/root/gc_%t_%p.log:time,level,tags:filesize=1024m,filecount=5",
-              "-XX:StartFlightRecording=name=on_startup,filename=/root/flight_recording.jfr,dumponexit=true,delay=2m,maxsize=512m",
-              "-Xms256m",
-              "-Xmx256m",
-              "-jar",
-              "/root/app.jar"
-            ]
           ports:
             - containerPort: 8080  # Application
           resources:
             requests:
-              memory: "256Mi"
-              cpu: "250m"
+              memory: "1.5Gi"
+              cpu: "500m"
             limits:
-              memory: "512Mi"
+              memory: "1.5Gi"
               cpu: "500m"
           livenessProbe:
             httpGet:
