--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = "info.matsumana.kubernetes"
-version = "0.2.0"
+version = "0.2.1-SNAPSHOT"
 
 sourceCompatibility = JavaVersion.VERSION_13
 targetCompatibility = JavaVersion.VERSION_13
