--- a/example/external-prometheus/prometheus.yml
+++ b/example/external-prometheus/prometheus.yml
@@ -3,6 +3,10 @@ global:
   evaluation_interval: 3s
 
 scrape_configs:
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
+
   - job_name: 'kubernetes-apiservers'
     scheme: https
     tls_config:
