--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = "info.matsumana.psystrike"
-version = "0.5.0"
+version = "0.5.1-SNAPSHOT"
 
 sourceCompatibility = JavaVersion.VERSION_13
 targetCompatibility = JavaVersion.VERSION_13
