--- a/example/manifests/psystrike.yml
+++ b/example/manifests/psystrike.yml
@@ -33,11 +33,11 @@ spec:
           #    value: DEBUG
           resources:
             requests:
-              memory: "1Gi"
-              cpu: "300m"
+              memory: 512Mi
+              cpu: 1
             limits:
-              memory: "1Gi"
-              cpu: "300m"
+              memory: 512Mi
+              cpu: 1
           livenessProbe:
             httpGet:
               path: /healthz
