--- a/psystrike/build.gradle
+++ b/psystrike/build.gradle
@@ -4,8 +4,10 @@ artifactId = 'psystrike'
 apply plugin: 'org.springframework.boot'
 
 dependencies {
-    implementation 'com.linecorp.armeria:armeria-spring-boot2-webflux-starter'
+    implementation 'com.linecorp.armeria:armeria-spring-boot2-starter'
     implementation 'com.linecorp.armeria:armeria-spring-boot2-actuator-starter'
+    implementation 'com.linecorp.armeria:armeria-rxjava2'
+    implementation 'com.github.akarnokd:rxjava2-jdk8-interop'
     implementation 'io.micrometer:micrometer-registry-prometheus'
 
     compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
