--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # settings for gradle-scripts
 group=info.matsumana.psystrike
-version=1.2.0
+version=1.2.1-SNAPSHOT
 projectName=Psystrike
 projectUrl=https://github.com/matsumana/psystrike
 projectDescription=Reverse proxy for collecting k8s metrics from an external Prometheus
